--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Orbitron', sans-serif;
     background: url('/assets/img/background.jpg') no-repeat center center fixed;
@@ -431,6 +435,36 @@ section {
     }
   }
   
+  .news {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: teal;
+    color: white;
+    font-family: 'Comic Neue', sans-serif;
+    text-transform: uppercase;
+    padding: 10px 0;
+}
+
+.news-content {
+    display: inline-block;
+    white-space: nowrap;
+    animation: scrollText 15s linear infinite;
+}
+
+@keyframes scrollText {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
 /* Styling for each scrolling message */
 .news-message {
   display: flex;
